@@ -1,8 +1,10 @@
 /*
- * This software is Copyright (c) 2012 Lukas Odzioba <lukas dot odzioba at gmail dot com>
+ * This software is
+ * Copyright (c) 2012 Lukas Odzioba <lukas dot odzioba at gmail dot com>
  * and Copyright (c) 2012-2018 magnum
  * and it is hereby released to the general public under the following terms:
- * Redistribution and use in source and binary forms, with or without modification, are permitted.
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted.
  *
  * hccap format was introduced by oclHashcat-plus (now renamed to hashcat),
  * and it is described here: http://hashcat.net/wiki/hccap
@@ -27,8 +29,8 @@
 #include "base64_convert.h"
 #include "hccap.h"
 
-#define BINARY_SIZE		sizeof(mic_t)
-#define BINARY_ALIGN		4
+#define BINARY_SIZE			sizeof(fmt_data)
+#define BINARY_ALIGN		sizeof(size_t)
 #ifdef WPAPMK
 #define PLAINTEXT_MIN_LEN   64
 #define PLAINTEXT_LENGTH    64
@@ -38,8 +40,8 @@
 #define PLAINTEXT_LENGTH    63 /* We can do 64 but spec. says 63 */
 #define BENCHMARK_LENGTH    0x108
 #endif
-#define SALT_SIZE		(sizeof(hccap_t) - sizeof(mic_t))
-#define SALT_ALIGN		MEM_ALIGN_NONE
+#define SALT_SIZE		sizeof(wpapsk_salt)
+#define SALT_ALIGN		MEM_ALIGN_WORD
 #define BENCHMARK_COMMENT	""
 #define FORMAT_TAG           "$WPAPSK$"
 #define FORMAT_TAG_LEN       (sizeof(FORMAT_TAG)-1)
@@ -59,13 +61,17 @@ typedef struct {
 } wpapsk_hash;
 
 typedef struct {
-	uint32_t length;
 #ifdef JOHN_OCL_WPAPSK
 	uint8_t  eapol[256 + 64];
 	uint32_t eapol_size;
 	uint8_t  data[64 + 12]; /* EAPOL data or PMKID */
 #endif
-	uint8_t  salt[36]; // essid
+	uint8_t  *salt;
+} wpapsk_data;
+
+typedef struct {
+	uint32_t length;
+	uint8_t  essid[36]; // essid
 } wpapsk_salt;
 
 static struct fmt_tests tests[] = {
@@ -100,19 +106,13 @@ static struct fmt_tests tests[] = {
 
 /** Below are common variables used by wpapsk_fmt.c and opencl_wpapsk_fmt.c **/
 
-static hccap_t hccap;			///structure with hccap data
-static wpapsk_salt currentsalt;		///structure for essid
-static mic_t *mic;			///table for MIC keys
+static wpapsk_salt *cur_salt;
+static mic_t *mic;			// table for MIC keys
 #ifndef JOHN_OCL_WPAPSK
 #ifndef WPAPMK
-static wpapsk_password *inbuffer;	///table for candidate passwords
+static wpapsk_password *inbuffer;	// table for candidate passwords
 #endif
-static wpapsk_hash *outbuffer;		///table for PMK calculated by GPU
-#endif
-
-#ifndef WPAPMK
-static int new_keys = 1;
-static char last_ssid[sizeof(hccap.essid)];
+static wpapsk_hash *outbuffer;		// table for calculated PMK
 #endif
 
 /** Below are common functions used by wpapsk_fmt.c and opencl_wpapsk_fmt.c **/
@@ -131,7 +131,7 @@ static hccap_t *decode_hccap(char *ciphertext)
 	memset(&hccap, 0, sizeof(hccap));
 	if (hash == NULL)
 		return &hccap;
-	while (essid != hash) {	///copy essid to hccap
+	while (essid != hash) {	// copy essid to hccap
 		*d++ = *essid++;
 	}
 	*d = '\0';
@@ -168,6 +168,90 @@ static hccap_t *decode_hccap(char *ciphertext)
 	return &hccap;
 }
 
+#ifdef WPAPSK_DEBUG
+static char *tomac(unsigned char *p) {
+	static char buf[48];
+	sprintf(buf, "%02X:%02X:%02X:%02X:%02X:%02X", p[0], p[1], p[2], p[3], p[4], p[5]);
+	return buf;
+}
+static char *hex(unsigned char *p, int len) {
+	static char buf[1024];
+	char *op=buf;
+	int i;
+	if (len > 32) {
+		do {
+			for (i = 0; i < 32; ++i) {
+				op += sprintf(op, "%02X", p[i]);
+				if (i<31&&i%4==3)
+					op += sprintf(op, " ");
+				if (i==15)
+					op += sprintf(op, ": ");
+			}
+			len -= 32;
+			p += 32;
+			op += sprintf(op, "\n          ");
+		} while (len > 32);
+	}
+	for (i = 0; i < len; ++i) {
+		op += sprintf(op, "%02X", p[i]);
+		if (i<31&&i%4==3)
+			op += sprintf(op, " ");
+		if (i==15)
+			op += sprintf(op, ": ");
+	}
+	return buf;
+}
+
+static void debug_hccap(hccap_t *hccap) {
+	printf("essid:    %s\n", hccap->essid);
+	printf("mac1:     %s\n", tomac(hccap->mac1));
+	printf("mac2:     %s\n", tomac(hccap->mac2));
+	printf("nonce1:   %s\n", hex(hccap->nonce1, 32));
+	printf("nonce2:   %s\n", hex(hccap->nonce2, 32));
+	printf("eapol:    %s\n", hex(hccap->eapol, 256));
+	printf("epol_sz:  %d (0x%02X)\n", hccap->eapol_size, hccap->eapol_size);
+	printf("keyver:   %d\n", hccap->keyver);
+	printf("keymic:   %s\n", hex(hccap->keymic, 16));
+}
+#endif
+
+#if 1
+static void *get_binary(char *ciphertext)
+{
+	static fmt_data data;
+	hccap_t *s;
+
+	data.flags = FMT_DATA_TINY;
+	data.size = sizeof(hccap_t);
+
+	s = mem_alloc_tiny(data.size, MEM_ALIGN_WORD);
+	data.blob = s;
+
+	if (!strncmp(ciphertext, FORMAT_TAG, FORMAT_TAG_LEN)) {
+		memcpy(s, decode_hccap(ciphertext), sizeof(hccap_t));
+	} else {
+		memset(s, 0, sizeof(hccap_t));
+		s->keyver = 0;
+		base64_convert(ciphertext, e_b64_hex, 2 * sizeof(mic_t), s->keymic,
+		               e_b64_raw, sizeof(mic_t),
+		               flg_Base64_DONOT_NULL_TERMINATE, 0);
+		ciphertext += 33;
+		base64_convert(ciphertext, e_b64_hex, 12, s->mac1,
+		               e_b64_raw, 6,
+		               flg_Base64_DONOT_NULL_TERMINATE, 0);
+		ciphertext += 13;
+		base64_convert(ciphertext, e_b64_hex, 12, s->mac2,
+		               e_b64_raw, 6,
+		               flg_Base64_DONOT_NULL_TERMINATE, 0);
+		ciphertext += 13;
+		base64_convert(ciphertext, e_b64_hex, 64, s->essid,
+		               e_b64_raw, 33,
+		               flg_Base64_DONOT_NULL_TERMINATE, 0);
+	}
+
+	return &data;
+}
+#else
 static void *get_binary(char *ciphertext)
 {
 	static union {
@@ -186,28 +270,28 @@ static void *get_binary(char *ciphertext)
 	}
 	return binary.c;
 }
+#endif
 
 static void *get_salt(char *ciphertext)
 {
-	static hccap_t s;
+	static wpapsk_salt salt;
+	hccap_t s;
 
 	if (!strncmp(ciphertext, FORMAT_TAG, FORMAT_TAG_LEN)) {
-		memcpy(&s, decode_hccap(ciphertext), SALT_SIZE);
+		memcpy(&s, decode_hccap(ciphertext), sizeof(hccap_t));
 	} else {
 		memset(&s, 0, sizeof(s));
-		s.keyver = 0;
 		ciphertext += 33;
-		base64_convert(ciphertext, e_b64_hex, 12, s.mac1, e_b64_raw, 6,
-		               flg_Base64_DONOT_NULL_TERMINATE, 0);
 		ciphertext += 13;
-		base64_convert(ciphertext, e_b64_hex, 12, s.mac2, e_b64_raw, 6,
-		               flg_Base64_DONOT_NULL_TERMINATE, 0);
 		ciphertext += 13;
 		base64_convert(ciphertext, e_b64_hex, 64, s.essid, e_b64_raw, 33,
 		               flg_Base64_DONOT_NULL_TERMINATE, 0);
 	}
 
-	return &s;
+	memcpy(salt.essid, s.essid, sizeof(salt.essid));
+	salt.length = strlen(s.essid);
+
+	return &salt;
 }
 
 static int valid(char *ciphertext, struct fmt_main *self)
@@ -266,7 +350,7 @@ static int valid(char *ciphertext, struct fmt_main *self)
 }
 
 #ifndef JOHN_OCL_WPAPSK
-static MAYBE_INLINE void prf_512(uint32_t * key, uint8_t * data, uint32_t * ret)
+static MAYBE_INLINE void prf_512(uint32_t *key, uint8_t *data, uint32_t *ret)
 {
 	char *text = (char*)"Pairwise key expansion";
 	unsigned char buff[100];
@@ -279,115 +363,61 @@ static MAYBE_INLINE void prf_512(uint32_t * key, uint8_t * data, uint32_t * ret)
 }
 #endif
 
-static void insert_mac(uint8_t * data)
+static void insert_mac(hccap_t *hccap, uint8_t *data)
 {
-	int k = memcmp(hccap.mac1, hccap.mac2, 6);
+	int k = memcmp(hccap->mac1, hccap->mac2, 6);
 	if (k > 0) {
-		memcpy(data, hccap.mac2, 6);
-		memcpy(data + 6, hccap.mac1, 6);
+		memcpy(data, hccap->mac2, 6);
+		memcpy(data + 6, hccap->mac1, 6);
 	} else {
-		memcpy(data, hccap.mac1, 6);
-		memcpy(data + 6, hccap.mac2, 6);
+		memcpy(data, hccap->mac1, 6);
+		memcpy(data + 6, hccap->mac2, 6);
 	}
 }
 
-static void insert_nonce(uint8_t * data)
+static void insert_nonce(hccap_t *hccap, uint8_t *data)
 {
-	int k = memcmp(hccap.nonce1, hccap.nonce2, 32);
+	int k = memcmp(hccap->nonce1, hccap->nonce2, 32);
 	if (k > 0) {
-		memcpy(data, hccap.nonce2, 32);
-		memcpy(data + 32, hccap.nonce1, 32);
+		memcpy(data, hccap->nonce2, 32);
+		memcpy(data + 32, hccap->nonce1, 32);
 	} else {
-		memcpy(data, hccap.nonce1, 32);
-		memcpy(data + 32, hccap.nonce2, 32);
+		memcpy(data, hccap->nonce1, 32);
+		memcpy(data + 32, hccap->nonce2, 32);
 	}
 }
-
-#ifdef WPAPSK_DEBUG
-static char *tomac(unsigned char *p) {
-	static char buf[48];
-	sprintf(buf, "%02X:%02X:%02X:%02X:%02X:%02X", p[0], p[1], p[2], p[3], p[4], p[5]);
-	return buf;
-}
-static char *hex(unsigned char *p, int len) {
-	static char buf[1024];
-	char *op=buf;
-	int i;
-	if (len > 32) {
-		do {
-			for (i = 0; i < 32; ++i) {
-				op += sprintf(op, "%02X", p[i]);
-				if (i<31&&i%4==3)
-					op += sprintf(op, " ");
-				if (i==15)
-					op += sprintf(op, ": ");
-			}
-			len -= 32;
-			p += 32;
-			op += sprintf(op, "\n          ");
-		} while (len > 32);
-	}
-	for (i = 0; i < len; ++i) {
-		op += sprintf(op, "%02X", p[i]);
-		if (i<31&&i%4==3)
-			op += sprintf(op, " ");
-		if (i==15)
-			op += sprintf(op, ": ");
-	}
-	return buf;
-}
-
-static void Debug_hccap() {
-	printf("essid:    %s\n", hccap.essid);
-	printf("mac1:     %s\n", tomac(hccap.mac1));
-	printf("mac2:     %s\n", tomac(hccap.mac2));
-	printf("nonce1:   %s\n", hex(hccap.nonce1, 32));
-	printf("nonce2:   %s\n", hex(hccap.nonce2, 32));
-	printf("eapol:    %s\n", hex(hccap.eapol, 256));
-	printf("epol_sz:  %d (0x%02X)\n", hccap.eapol_size, hccap.eapol_size);
-	printf("keyver:   %d\n", hccap.keyver);
-	printf("keymic:   %s\n", hex(hccap.keymic, 16));
-}
-#endif
 
 static void set_salt(void *salt)
 {
-	memcpy(&hccap, salt, SALT_SIZE);
-	strncpy((char*)currentsalt.salt, hccap.essid, sizeof(currentsalt.salt));
-	currentsalt.length = strlen(hccap.essid);
+	cur_salt = salt;
 
 #ifdef JOHN_OCL_WPAPSK
-	currentsalt.eapol_size = hccap.eapol_size;
-	memcpy(currentsalt.eapol, hccap.eapol, hccap.eapol_size);
-	memset(currentsalt.eapol + hccap.eapol_size, 0x80, 1);
-	memset(currentsalt.eapol + hccap.eapol_size + 1, 0, 256 + 64 - hccap.eapol_size - 1);
+	cur_data.eapol_size = hccap.eapol_size;
+	memcpy(cur_data.eapol, hccap.eapol, hccap.eapol_size);
+	memset(cur_data.eapol + hccap.eapol_size, 0x80, 1);
+	memset(cur_data.eapol + hccap.eapol_size + 1, 0, 256 + 64 - hccap.eapol_size - 1);
 	if (hccap.keyver == 2)
-		alter_endianity(currentsalt.eapol, 256+56);
-	((unsigned int*)currentsalt.eapol)[16 * ((hccap.eapol_size + 8) / 64) + ((hccap.keyver == 1) ? 14 : 15)] = (64 + hccap.eapol_size) << 3;
+		alter_endianity(cur_data.eapol, 256+56);
+	((unsigned int*)cur_data.eapol)[16 * ((hccap.eapol_size + 8) / 64) + ((hccap.keyver == 1) ? 14 : 15)] = (64 + hccap.eapol_size) << 3;
 	if (hccap.keyver == 0) {
-		memcpy(currentsalt.data, "PMK Name", 8);
-		memcpy(currentsalt.data + 8, hccap.mac1, 6);
-		memcpy(currentsalt.data + 14, hccap.mac2, 6);
-		alter_endianity(currentsalt.data, 20);
+		memcpy(cur_data.data, "PMK Name", 8);
+		memcpy(cur_data.data + 8, hccap.mac1, 6);
+		memcpy(cur_data.data + 14, hccap.mac2, 6);
+		alter_endianity(cur_data.data, 20);
 	} else {
-		insert_mac(currentsalt.data);
-		insert_nonce(currentsalt.data + 12);
+		insert_mac(cur_data.data);
+		insert_nonce(cur_data.data + 12);
 		if (hccap.keyver < 3)
-			alter_endianity(currentsalt.data, 64 + 12);
+			alter_endianity(cur_data.data, 64 + 12);
 	}
 
-	HANDLE_CLERROR(clEnqueueWriteBuffer(queue[gpu_id], mem_salt, CL_FALSE, 0, sizeof(wpapsk_salt), &currentsalt, 0, NULL, NULL), "Salt transfer");
+	HANDLE_CLERROR(clEnqueueWriteBuffer(queue[gpu_id], mem_salt, CL_FALSE, 0, sizeof(wpapsk_data), &cur_data, 0, NULL, NULL), "Copy setting to gpu");
 	HANDLE_CLERROR(clFlush(queue[gpu_id]), "clFlush failed in set_salt()");
-#endif
-	//Debug_hccap();
+#endif /* JOHN_OCL_WPAPSK */
 }
 
 #ifndef JOHN_OCL_WPAPSK
 #ifndef WPAPMK
-static void clear_keys(void) {
-	new_keys = 1;
-}
-
 #undef set_key
 static void set_key(char *key, int index)
 {
@@ -396,7 +426,6 @@ static void set_key(char *key, int index)
 		length = PLAINTEXT_LENGTH;
 	inbuffer[index].length = length;
 	memcpy(inbuffer[index].v, key, length);
-	new_keys = 1;
 }
 
 static char *get_key(int index)
@@ -533,38 +562,37 @@ static void sha256_prf_bits(const u8 *key, size_t key_len, const char *label,
 
 /* Code borrowed from https://w1.fi/wpa_supplicant/ ends */
 
-static void wpapsk_postprocess(int keys)
+static int cmp_all(void *cur_data, int count)
 {
+	fmt_data *blob = cur_data;
+	hccap_t *hccap = blob->blob;
 	int i;
 	uint8_t data[64 + 12];
 
-	if (hccap.keyver == 0) {
+	if (hccap->keyver == 0) {
 		uint8_t msg[8 + 6 + 6] = "PMK Name";
 
-		memcpy(msg + 8, hccap.mac1, 6);
-		memcpy(msg + 14, hccap.mac2, 6);
+		memcpy(msg + 8, hccap->mac1, 6);
+		memcpy(msg + 14, hccap->mac2, 6);
 
 #ifdef _OPENMP
-#pragma omp parallel for default(none) private(i) shared(keys, outbuffer, msg, mic)
+#pragma omp parallel for default(none) private(i) shared(count, outbuffer, msg, mic)
 #endif
 		/* Create "keymic" that is actually PMKID */
-		for (i = 0; i < keys; i++) {
+		for (i = 0; i < count; i++) {
 			hmac_sha1((unsigned char*)outbuffer[i].v, 32,
-			          msg, 20,
-			          mic[i].keymic, 16);
+			          msg, 20, mic[i].keymic, 16);
 		}
-
-		return;
+	} else {
+		insert_mac(hccap, data);
+		insert_nonce(hccap, data + 12);
 	}
 
-	insert_mac(data);
-	insert_nonce(data + 12);
-
-	if (hccap.keyver == 1) {
+	if (hccap->keyver == 1) {
 #ifdef _OPENMP
-#pragma omp parallel for default(none) private(i) shared(keys, outbuffer, data, hccap, mic)
+#pragma omp parallel for default(none) private(i) shared(count, outbuffer, data, hccap, mic)
 #endif
-		for (i = 0; i < keys; i++) {
+		for (i = 0; i < count; i++) {
 			union {
 				uint32_t u32[20/4];
 				unsigned char uc[20];
@@ -574,26 +602,26 @@ static void wpapsk_postprocess(int keys)
 
 			prf_512(outbuffer[i].v, data, prf.u32); // PTK
 			hmac_md5_init_K16(prf.uc, &ctx);
-			hmac_md5_update(hccap.eapol, hccap.eapol_size, &ctx);
+			hmac_md5_update(hccap->eapol, hccap->eapol_size, &ctx);
 			hmac_md5_final(mic[i].keymic, &ctx);
 		}
-	} else if (hccap.keyver == 2) {
+	} else if (hccap->keyver == 2) {
 #ifdef _OPENMP
-#pragma omp parallel for default(none) private(i) shared(keys, outbuffer, data, hccap, mic)
+#pragma omp parallel for default(none) private(i) shared(count, outbuffer, data, hccap, mic)
 #endif
-		for (i = 0; i < keys; i++) {
+		for (i = 0; i < count; i++) {
 			uint32_t prf[20/4];
 
 			prf_512(outbuffer[i].v, data, prf); // PTK
-			hmac_sha1((unsigned char*)prf, 16, hccap.eapol,
-			          hccap.eapol_size, mic[i].keymic, 16);
+			hmac_sha1((unsigned char*)prf, 16, hccap->eapol,
+			          hccap->eapol_size, mic[i].keymic, 16);
 		}
 #if !AC_BUILT || HAVE_OPENSSL_CMAC_H
-	} else if (hccap.keyver == 3) { // 802.11w, WPA-PSK-SHA256
+	} else if (hccap->keyver == 3) { // 802.11w, WPA-PSK-SHA256
 #ifdef _OPENMP
-#pragma omp parallel for default(none) private(i) shared(keys, outbuffer, data, hccap, mic)
+#pragma omp parallel for default(none) private(i) shared(count, outbuffer, data, hccap, mic)
 #endif
-		for (i = 0; i < keys; i++) {
+		for (i = 0; i < count; i++) {
 			unsigned char ptk[48];
 			unsigned char cmic[16];
 			size_t miclen;
@@ -604,96 +632,63 @@ static void wpapsk_postprocess(int keys)
 			// Compute MIC
 			ctx = CMAC_CTX_new();
 			CMAC_Init(ctx, ptk, 16, EVP_aes_128_cbc(), 0);
-			CMAC_Update(ctx, hccap.eapol, hccap.eapol_size);
+			CMAC_Update(ctx, hccap->eapol, hccap->eapol_size);
 			CMAC_Final(ctx, cmic, &miclen);
 			memcpy(mic[i].keymic, cmic, 16);
 			CMAC_CTX_free(ctx);
 		}
 #endif /* HAVE_OPENSSL_CMAC_H */
 	}
-}
-#endif /* JOHN_OCL_WPAPSK */
 
-static int get_hash_0(int index)
-{
-	return mic[index].u32 & PH_MASK_0;
-}
-
-static int get_hash_1(int index)
-{
-	return mic[index].u32 & PH_MASK_1;
-}
-
-static int get_hash_2(int index)
-{
-	return mic[index].u32 & PH_MASK_2;
-}
-
-static int get_hash_3(int index)
-{
-	return mic[index].u32 & PH_MASK_3;
-}
-
-static int get_hash_4(int index)
-{
-	return mic[index].u32 & PH_MASK_4;
-}
-
-static int get_hash_5(int index)
-{
-	return mic[index].u32 & PH_MASK_5;
-}
-
-static int get_hash_6(int index)
-{
-	return mic[index].u32 & PH_MASK_6;
-}
-
-static int cmp_all(void *binary, int count)
-{
-	uint32_t i, b = ((uint32_t *) binary)[0];
-	for (i = 0; i < count; i++) {
-		uint32_t *m = (uint32_t*) mic[i].keymic;
-		if (b == m[0])
+	for (i = 0; i < count; i++)
+		if (!memcmp(hccap->keymic, mic[i].keymic, 16))
 			return 1;
-	}
 	return 0;
 }
 
-static int cmp_one(void *binary, int index)
+static int cmp_one(void *cur_data, int index)
 {
-	uint8_t i;
-	uint32_t *b = (uint32_t*) binary;
-	uint32_t *m = (uint32_t*) mic[index].keymic;
-	for (i = 0; i < BINARY_SIZE / 4; i++)
-		if (b[i] != m[i])
-			return 0;
-	return 1;
+	fmt_data *blob = cur_data;
+	hccap_t *hccap = blob->blob;
+
+	return !memcmp(hccap->keymic, mic[index].keymic, 16);
 }
+#endif /* JOHN_OCL_WPAPSK */
 
 static int cmp_exact(char *source, int index)
 {
 	return 1;
 }
 
-static int salt_hash(void *salt)
+/*  Public domain hash function by DJ Bernstein (salt is an ESSID)   */
+/* Next after 5381 are 52711, 648391, 9737333, 174440041, 3657500101 */
+static int salt_hash(void *salt_s)
 {
-	hccap_t *s = salt;
-	unsigned int mac1;
-	unsigned int mac2;
+	wpapsk_salt *salt = salt_s;
+	unsigned int len = salt->length;
+	unsigned char *c = salt->essid;
+	unsigned int hash = 52711;
 
-	memcpy(&mac1, &s->mac1[2], 4);
-	memcpy(&mac2, &s->mac2[2], 4);
+	while (len--)
+		hash = ((hash << 5) + hash) ^ *c++;
 
-	return (mac1 + mac2) & (SALT_HASH_SIZE - 1);
+	//fprintf(stderr, "salt %s hash 0x%05x\n", salt->essid, hash & (SALT_HASH_SIZE - 1));
+	return hash & (SALT_HASH_SIZE - 1);
 }
 
+#if 0
 static int salt_compare(const void *x, const void *y)
 {
-	int c = strncmp((const char*)x, (const char*)y, 36);
+	const wpapsk_salt *s1 = x, *s2 = y;
+	int c = strncmp((const char*)s1->essid, (const char*)s2->essid,
+	                MAX(s1->length, s2->length));
 	if (c) return c;
 	return memcmp((const char*)x, (const char*)y, SALT_SIZE);
 }
+#endif
+
+#if 0
+/* Sadly, this broke when we started using only the ESSID as salt */
 
 /*
  * key version as first tunable cost
@@ -708,5 +703,6 @@ static unsigned int get_keyver(void *salt)
 
 	return (unsigned int) my_salt->keyver;
 }
+#endif
 
 #endif
